Settings: Add screen color settings
Add "Screen Color" item in settings.
This function support set Hue, Saturation, Contrast and Intensity value,
and screen color will be changed by this settings.

Change-Id: If6f6e7ee7f28862476a8b955cd3252175fefa2a1

Settings : Fix CustomScreenColor when picking an image

Change-Id: I510b562eb0e9fb9b558380db5c5d6e818ba17d12

Settings: Start service as explicit intent

Needed for API level 21. Add some ressource bits, set text color to
white.

Change-Id: I9c4a9139be69fa5c6d6c74055b5475f0d930c93a

Patchset: 4
http://review.cyanogenmod.org/#/c/82873/

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -150,6 +150,17 @@
                     android:persistent="false" />
         </PreferenceCategory>
 
+        <PreferenceScreen
+                android:persistent="false"
+                android:key="screencolor_settings"
+                android:title="@string/screencolor"
+                android:summary="@string/screencolor_summary">
+            <intent
+                android:action="com.qualcomm.display.PPService"
+                android:targetPackage="com.android.settings"
+                android:targetClass="com.android.settings.ScreenColorSettings" />
+         </PreferenceScreen>
+
          <PreferenceCategory
              android:key="category_wakeup_options"
              android:title="@string/display_category_wakeup_options_title" >
