--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -245,4 +245,11 @@ limitations under the License.
         <item>3</item>
     </string-array>
 
+    <!-- Values for screen color  -->
+    <string-array name="screen_color_setting">
+        <item>Standard</item>
+        <item>Vivid</item>
+        <item>Custom</item>
+    </string-array>
+
 </resources>
