--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1141,4 +1141,7 @@
     <string name="screen_recorder_record_audio_summary">Record audio from the microphone</string>
     <string name="screen_recorder_power_menu_summary">Add a Screen Record entry in the power menu</string>
 
+    <!-- SuperSU -->
+    <string name="supersu_title">SuperSU</string>
+
 </resources>
