[3/3]Settings: add "Accept all files" option for incoming files via Bluetooth
  Vanilla Android requires the incoming file from Bluetooth to be certain mime-types.
  The mime-types allowed are defined in
packages/apps/Bluetooth/src/com/android/bluetooth/opp/Constants.java
  But sometimes we need to accept files that is not in the list,such as RAR archives
or APK packages.
  This patch makes "Accept all files" an option in Settings -> Bluetooth -> (Menu),
and then saves users' choice to Settings Provider database.
  This will meet users' demand as well as keep the phone from unsafe files
when users don't need to accept the files out of the mime-type whitelist.

Change-Id: I5f04d3ccb45bd5c6525b746855bd19ccc8501d32

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1042,4 +1042,8 @@
     <string name="ime_interpolator_title">Interpolator</string>
     <string name="ime_duration_title">IME duration</string>
 
+    <!-- Bluetooth additions -->
+    <!-- Bluetooth accept all Filestypes -->
+    <string name="bluetooth_accept_all_files">Accept all file types</string>
+
 </resources>
