AppOps: Add support for nfc operation
Add support for nfc operation

Change-Id: I0ca617b11d3f65f80cc49c3f629312e2fee1ba91

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -652,6 +652,7 @@
         <item>read MMS</item>
         <item>write MMS</item>
         <item>auto start</item>
+        <item>nfc change</item>
     </string-array>
 
     <!-- User display names for app ops codes -->
@@ -710,6 +711,7 @@
         <item>Read MMS</item>
         <item>Write MMS</item>
         <item>Auto start</item>
+        <item>Nfc change</item>
     </string-array>
 
     <!-- Titles for the list of long press timeout options. -->
