--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -33,41 +33,48 @@
     </PreferenceScreen>
 
     <CheckBoxPreference
-        android:key="keep_screen_on"
-        android:title="@string/keep_screen_on"
-        android:summary="@string/keep_screen_on_summary"/>
+            android:key="keep_screen_on"
+            android:title="@string/keep_screen_on"
+            android:summary="@string/keep_screen_on_summary"/>
 
-    <ListPreference
-        android:key="hdcp_checking"
-        android:title="@string/hdcp_checking_title"
-        android:dialogTitle="@string/hdcp_checking_dialog_title"
-        android:entries="@array/hdcp_checking_titles"
-        android:entryValues="@array/hdcp_checking_values" />
+        <ListPreference
+            android:key="hdcp_checking"
+            android:title="@string/hdcp_checking_title"
+            android:dialogTitle="@string/hdcp_checking_dialog_title"
+            android:entries="@array/hdcp_checking_titles"
+            android:entryValues="@array/hdcp_checking_values" />
 
-    <CheckBoxPreference
-        android:key="bt_hci_snoop_log"
-        android:title="@string/bt_hci_snoop_log"
-        android:summary="@string/bt_hci_snoop_log_summary"/>
+        <CheckBoxPreference
+            android:key="bt_hci_snoop_log"
+            android:title="@string/bt_hci_snoop_log"
+            android:summary="@string/bt_hci_snoop_log_summary"/>
 
-    <CheckBoxPreference
-        android:key="oem_unlock_enable"
-        android:title="@string/oem_unlock_enable"
-        android:summary="@string/oem_unlock_enable_summary"/>
+        <CheckBoxPreference
+            android:key="oem_unlock_enable"
+            android:title="@string/oem_unlock_enable"
+            android:summary="@string/oem_unlock_enable_summary"/>
 
-    <PreferenceScreen android:key="proc_stats"
+        <PreferenceScreen 
+            android:key="proc_stats"
             android:title="@string/process_stats_summary_title"
             android:summary="@string/process_stats_summary"
             android:fragment="com.android.settings.applications.ProcessStatsUi">
-    </PreferenceScreen>
+        </PreferenceScreen>
 
-    <ListPreference
-        android:key="root_access"
-        android:title="@string/root_access"
-        android:persistent="false"
-        android:entries="@array/root_access_entries"
-        android:entryValues="@array/root_access_values" />
+        <ListPreference
+            android:key="root_access"
+            android:title="@string/root_access"
+            android:persistent="false"
+            android:entries="@array/root_access_entries"
+            android:entryValues="@array/root_access_values" />
 
-    <PreferenceCategory android:key="debug_debugging_category"
+        <CheckBoxPreference
+            android:key="enable_quickboot"
+            android:title="@string/enable_quickboot_title"
+            android:summary="@string/enable_quickboot_summary" />
+
+    <PreferenceCategory 
+            android:key="debug_debugging_category"
             android:title="@string/debug_debugging_category">
 
         <CheckBoxPreference
@@ -81,8 +88,9 @@
             android:summary="@string/adb_notify_summary"
             android:dependency="enable_adb"/>
 
-        <Preference android:key="clear_adb_keys"
-                android:title="@string/clear_adb_keys" />
+        <Preference 
+            android:key="clear_adb_keys"
+            android:title="@string/clear_adb_keys" />
 
         <CheckBoxPreference
             android:key="enable_terminal"
@@ -100,11 +108,12 @@
             android:summary="@string/allow_mock_location_summary"/>
 
         <CheckBoxPreference
-                android:key="debug_view_attributes"
-                android:title="@string/debug_view_attributes" />
+            android:key="debug_view_attributes"
+            android:title="@string/debug_view_attributes" />
 
-        <PreferenceScreen android:key="debug_app"
-                android:title="@string/debug_app" />
+        <PreferenceScreen 
+            android:key="debug_app"
+            android:title="@string/debug_app" />
 
         <CheckBoxPreference
             android:key="wait_for_debugger"
@@ -145,7 +154,8 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_input_category"
+    <PreferenceCategory 
+            android:key="debug_input_category"
             android:title="@string/debug_input_category">
 
         <CheckBoxPreference
@@ -160,7 +170,8 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_drawing_category"
+    <PreferenceCategory 
+            android:key="debug_drawing_category"
             android:title="@string/debug_drawing_category">
 
         <CheckBoxPreference
@@ -208,74 +219,77 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_hw_drawing_category"
+    <PreferenceCategory 
+            android:key="debug_hw_drawing_category"
             android:title="@string/debug_hw_drawing_category">
 
         <CheckBoxPreference
-                android:key="force_hw_ui"
-                android:title="@string/force_hw_ui"
-                android:summary="@string/force_hw_ui_summary"/>
+            android:key="force_hw_ui"
+            android:title="@string/force_hw_ui"
+            android:summary="@string/force_hw_ui_summary"/>
 
         <CheckBoxPreference
-                android:key="show_hw_screen_udpates"
-                android:title="@string/show_hw_screen_updates"
-                android:summary="@string/show_hw_screen_updates_summary"/>
+            android:key="show_hw_screen_udpates"
+            android:title="@string/show_hw_screen_updates"
+            android:summary="@string/show_hw_screen_updates_summary"/>
 
         <CheckBoxPreference
-                android:key="show_hw_layers_udpates"
-                android:title="@string/show_hw_layers_updates"
-                android:summary="@string/show_hw_layers_updates_summary"/>
+            android:key="show_hw_layers_udpates"
+            android:title="@string/show_hw_layers_updates"
+            android:summary="@string/show_hw_layers_updates_summary"/>
 
         <ListPreference
-                android:key="debug_hw_overdraw"
-                android:title="@string/debug_hw_overdraw"
-                android:persistent="false"
-                android:entries="@array/debug_hw_overdraw_entries"
-                android:entryValues="@array/debug_hw_overdraw_values" />
+            android:key="debug_hw_overdraw"
+            android:title="@string/debug_hw_overdraw"
+            android:persistent="false"
+            android:entries="@array/debug_hw_overdraw_entries"
+            android:entryValues="@array/debug_hw_overdraw_values" />
 
         <ListPreference
-                android:key="show_non_rect_clip"
-                android:title="@string/show_non_rect_clip"
-                android:persistent="false"
-                android:entries="@array/show_non_rect_clip_entries"
-                android:entryValues="@array/show_non_rect_clip_values" />
+            android:key="show_non_rect_clip"
+            android:title="@string/show_non_rect_clip"
+            android:persistent="false"
+            android:entries="@array/show_non_rect_clip_entries"
+            android:entryValues="@array/show_non_rect_clip_values" />
 
         <CheckBoxPreference
-                android:key="force_msaa"
-                android:title="@string/force_msaa"
-                android:summary="@string/force_msaa_summary"/>
+            android:key="force_msaa"
+            android:title="@string/force_msaa"
+            android:summary="@string/force_msaa_summary"/>
 
         <CheckBoxPreference
-                android:key="disable_overlays"
-                android:title="@string/disable_overlays"
-                android:summary="@string/disable_overlays_summary"/>
+            android:key="disable_overlays"
+            android:title="@string/disable_overlays"
+            android:summary="@string/disable_overlays_summary"/>
 
         <ListPreference
-                android:entries="@array/simulate_color_space_entries"
-                android:entryValues="@array/simulate_color_space_values"
-                android:key="simulate_color_space"
-                android:persistent="false"
-                android:summary="%s"
-                android:title="@string/simulate_color_space" />
+            android:entries="@array/simulate_color_space_entries"
+            android:entryValues="@array/simulate_color_space_values"
+            android:key="simulate_color_space"
+            android:persistent="false"
+            android:summary="%s"
+            android:title="@string/simulate_color_space" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="media_category"
+    <PreferenceCategory 
+            android:key="media_category"
             android:title="@string/media_category">
 
         <CheckBoxPreference
-                android:key="use_nuplayer"
-                android:title="@string/use_nuplayer"
-                android:summary="@string/use_nuplayer_summary"/>
+            android:key="use_nuplayer"
+            android:title="@string/use_nuplayer"
+            android:summary="@string/use_nuplayer_summary"/>
 
         <CheckBoxPreference
-                android:key="usb_audio"
-                android:title="@string/usb_audio_disable_routing"
-                android:summary="@string/usb_audio_disable_routing_summary" />
+            android:key="usb_audio"
+            android:title="@string/usb_audio_disable_routing"
+            android:summary="@string/usb_audio_disable_routing_summary" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_monitoring_category"
+    <PreferenceCategory 
+            android:key="debug_monitoring_category"
             android:title="@string/debug_monitoring_category">
 
         <CheckBoxPreference
@@ -304,7 +318,8 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_applications_category"
+    <PreferenceCategory 
+            android:key="debug_applications_category"
             android:title="@string/debug_applications_category">
 
         <CheckBoxPreference
@@ -331,7 +346,8 @@
 
      </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_LAN_category"
+    <PreferenceCategory 
+            android:key="debug_LAN_category"
             android:title="@string/debug_LAN_category">
 
         <com.android.settings.slim.HostnamePreference
