--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -15,19 +15,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <resources>
-    <!-- Ring mode options. -->
-    <string-array name="ring_mode_entries" translatable="false">
-        <item>@string/ring_mode_normal</item>
-        <item>@string/ring_mode_vibrate</item>
-        <item>@string/ring_mode_mute</item>
-    </string-array>
-
-    <!-- Values for Ring mode. Do not translate. -->
-    <string-array name="ring_mode_values" translatable="false">
-        <item>normal</item>
-        <item>vibrate</item>
-        <item>mute</item>
-    </string-array>
 
     <!-- Profile mode options. -->
     <string-array name="profile_entries">
@@ -61,13 +48,6 @@ limitations under the License.
         <item>0</item>
         <item>1</item>
         <item>2</item>
-    </string-array>
-
-    <!--  Values for profile Wi-Fi triggers -->
-    <string-array name="profile_trigger_wifi_options" translatable="false">
-        <item>@string/profile_trigger_connect</item>
-        <item>@string/profile_trigger_disconnect</item>
-        <item>@string/profile_trigger_notrigger</item>
     </string-array>
 
     <!--  Values for profile trigger types -->
@@ -115,6 +95,22 @@ limitations under the License.
 
     <string-array name="blacklist_policy_private_values" translatable="false">
         <item>1</item>
+    </string-array>
+
+    <!-- Ring mode options. -->
+    <string-array name="ring_mode_entries" translatable="false">
+        <item>@string/ring_mode_normal</item>
+        <item>@string/ring_mode_vibrate</item>
+        <item>@string/ring_mode_mute</item>
+        <item>@string/ring_mode_unchanged</item>
+    </string-array>
+
+    <!-- Values for Ring mode. Do not translate. -->
+    <string-array name="ring_mode_values" translatable="false">
+        <item>normal</item>
+        <item>vibrate</item>
+        <item>mute</item>
+        <item></item>
     </string-array>
 
     <!--- Sms security limit -->
@@ -188,6 +184,42 @@ limitations under the License.
         <item>1000</item>
         <item>2500</item>
         <item>5000</item>
+    </string-array>
+
+    <!--  Values for profile Wi-Fi triggers -->
+    <string-array name="profile_trigger_wifi_options" translatable="false">
+        <item>@string/profile_trigger_connect</item>
+        <item>@string/profile_trigger_disconnect</item>
+        <item>@string/profile_trigger_a2dp_connect</item>
+        <item>@string/profile_trigger_a2dp_disconnect</item>
+        <item>@string/profile_trigger_notrigger</item>
+    </string-array>
+
+    <!--  Values for profile Wi-Fi triggers.  Do not translate. -->
+    <string-array name="profile_trigger_wifi_options_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>3</item>
+        <item>4</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="profile_action_generic_connection_entries">
+        <item>@string/profile_action_none</item>
+        <item>@string/profile_action_disabled</item>
+        <item>@string/profile_action_enable</item>
+    </string-array>
+
+    <string-array name="profile_action_generic_connection_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string-array name="trigger_page_title">
+        <item>WiFi</item>
+        <item>Bluetooth</item>
+        <item>NFC</item>
     </string-array>
 
 </resources>
