Fusion Extra Info - This adds the ability to give users extra info in the About Phone/Tablet section - This also does not require us to clutter up the build.prop - The information provided to the user will be pulled from several places automatically - Removed hardware info patch by roman/aokp
http://i.imgur.com/ywBeqDj.png
http://i.imgur.com/G4pH0wl.png
http://i.imgur.com/usVGrCy.png

Credit/Thanks to Chris_84 for his guide explaining build.prop values
http://forum.xda-developers.com/galaxy-s3/general/guide-build-prop-wiki-t2047076

**DOES NOT REQUIRE TO PLACE ANY OVERLAYS**

If you have any from the roman/aokp patch, please remove after merging

Credit: Dirty Unicorns

Change-Id: Ia22735508935d675ed5a9deca17953a9de03f23e

Signed-off-by: Fusion-Rom <dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -130,4 +130,9 @@
     <string name="root_access_apps">Apps only</string>
     <string name="root_access_adb">ADB only</string>
     <string name="root_access_all">Apps and ADB</string>
+
+    <!-- Fusion Extra Info -->
+    <string name="extrainfo">Extra information</string>
+    <string name="extrainfo_summary">Display extra info for cpu, display, etc</string>
+
 </resources>
