--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -226,6 +226,9 @@
     <string name="fusionsp_version_title">Fusion version</string>
     <string name="fusionsp_version_default">Unknown</string>
 
+    <!-- About phone screen, legal summary -->
+    <string name="device_legal_summary">Open source and Google licenses</string>
+
     <!-- Build date -->
     <string name="build_date">Build date</string>
     <string name="build_date_default">2012-01-01-0000</string>
