--- a/res/xml/device_info_status.xml
+++ b/res/xml/device_info_status.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2008 The Android Open Source Project
 
+     Modified (C) 2014 The Fusion Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -21,113 +23,135 @@
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/battery_status_title"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="battery_level"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/battery_level_title"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="operator_name"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_operator"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="signal_strength"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_signal_strength"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="network_type"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_network_type"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="latest_area_info"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_latest_area_info"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="service_state"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_service_state"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="roaming_state"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_roaming"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="data_state"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_data_state"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="number"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_number"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <!-- This menu item is only for CDMA phone -->
     <Preference android:key="min_number"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_min_number"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <!-- This menu item is only for CDMA phone -->
     <Preference android:key="prl_version"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_prl_version"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <!-- This menu item is only for CDMA phone -->
     <Preference android:key="meid_number"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_meid_number"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="imei"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_imei"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="imei_sv"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_imei_sv"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="icc_id"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_icc_id"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="wifi_ip_address"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/wifi_advanced_ip_address_title"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="wifi_mac_address"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_wifi_mac_address"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="bt_address"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_bt_address"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="serial_number"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_serial_number"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="up_time"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_up_time"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
     <Preference android:key="wimax_mac_address"
         style="?android:attr/preferenceInformationStyle"
         android:title="@string/status_wimax_mac_address"
         android:summary="@string/device_info_not_available"
-        android:persistent="false" />
+        android:persistent="false"
+        android:selectable="false" />
 </PreferenceScreen>
