make kernel selectable and fusion version non-selectable
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -167,7 +167,7 @@
         <!-- Device Kernel version -->
         <Preference android:key="kernel_version"
                 style="?android:preferenceInformationStyle"
-                android:title="@string/kernel_version"
+                android:title="@string/kernel_version_title"
                 android:summary="@string/device_info_default"
                 android:selectable="false" />
 
