--- a/res/xml/fusion_navigation_settings.xml
+++ b/res/xml/fusion_navigation_settings.xml
@@ -46,6 +46,7 @@
             android:key="hardware_keys_disable"
             android:title="@string/hardware_keys_disable_title"
             android:summary="@string/hardware_keys_disable_summary"
+            android:disableDependentsState="true"
             android:defaultValue="false" />
 
         <com.android.settings.fusion.ButtonBacklightBrightness
@@ -53,6 +54,13 @@
             android:title="@string/button_backlight_title"
             android:dialogTitle="@string/button_backlight_title"
             android:persistent="false" />
+
+        <PreferenceScreen
+            android:id="@+id/button_settings"
+            android:title="@string/button_pref_title"
+            android:fragment="com.android.settings.ButtonSettings"
+            android:dependency="hardware_keys_disable"
+            android:icon="@drawable/ic_settings_home" />
 
     </PreferenceCategory>
 
