--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -74,7 +74,7 @@
 
         <PreferenceScreen
                 android:key="display_rotation"
-                android:fragment="com.android.settings.slim.DisplayRotation"
+                android:fragment="com.android.settings.fusion.DisplayRotation"
                 android:title="@string/display_rotation_title" />
 
         <PreferenceScreen
