Settings: Bringup expanded desktop and implement per-user configuration. (PS17)
Change-Id: Ib673d278d23423fe6885c73f1eb3dd858633e5b6

Patchset: 17
http://review.cyanogenmod.org/#/c/77772/

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -134,6 +134,12 @@
                 android:action="com.qualcomm.display.PPService"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.ScreenColorSettings" />
+
+        <PreferenceScreen
+                android:key="expanded_desktop"
+                android:title="@string/power_menu_expanded_desktop"
+                android:fragment="com.android.settings.applications.ExpandedDesktopPreferenceFragment" />
+
          </PreferenceScreen>
 
         <PreferenceCategory
