--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -262,4 +262,10 @@ limitations under the License.
         <item>Custom</item>
     </string-array>
 
+    <string-array name="expanded_desktop_states" translatable="false">
+        <item>@string/expanded_disabled_for_all</item>
+        <item>@string/expanded_enabled_for_all</item>
+        <item>@string/expanded_user_configurable</item>
+    </string-array>
+
 </resources>
