Added Fusion Main Settings
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -22,6 +22,9 @@
     <string name="enabled">Enabled</string>
     <string name="default_string">Default</string>
 
+    <!-- Fusion General -->
+    <string name="fusion_settings_title">Fusion</string>
+
     <!-- Advanced, Device specific (DeviceParts) settings -->
     <string name="device_settings_title">Device</string>
 
