--- a/res/xml/fusion_main_settings.xml
+++ b/res/xml/fusion_main_settings.xml
@@ -19,6 +19,13 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/fusion_settings_title" >
 
+    <!-- Status bar -->
+    <PreferenceScreen
+        android:id="@+id/statusbar_settings"
+        android:title="@string/statusbar_settings_title"
+        android:fragment="com.android.settings.fusion.StatusBarSettings"
+        android:icon="@drawable/ic_fusion_statusbar" />
+
     <PreferenceScreen
         android:key="hfm_settings"
         android:title="@string/hfm_pref_screen_title"
