--- a/res/xml/notification_settings.xml
+++ b/res/xml/notification_settings.xml
@@ -87,7 +87,7 @@
                 android:ringtoneType="notification" />
 
         <!-- Screenshot tone -->
-        <com.android.settings.fusion.SystemCheckBoxPreference
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
                 android:key="screenshot_sound"
                 android:title="@string/screenshot_sound_title"
                 android:summary="@string/screenshot_sound_summary"
