--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -222,4 +222,8 @@
     <string name="hfm_dialog_success">/4 hosts sources successfully applied!</string>
     <string name="hfm_dialog_conn_error">Error: No network connectivity</string>
 
+    <!-- About phone screen, Fusion version -->
+    <string name="fusionsp_version_title">Fusion version</string>
+    <string name="fusionsp_version_default">Unknown</string>
+
 </resources>
