--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -129,6 +129,12 @@
                 android:title="@string/fusionsp_version_title"
                 android:summary="@string/fusionsp_version_default"/>
 
+        <!-- Build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
+
         <!-- Detailed build version -->
         <Preference android:key="build_number"
                 style="?android:preferenceInformationStyle"
