--- a/res/xml/fusion_main_settings.xml
+++ b/res/xml/fusion_main_settings.xml
@@ -19,6 +19,17 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/fusion_settings_title" >
 
+    <!-- Equalizer -->
+    <Preference
+        android:id="@+id/equalizer_settings"
+        android:title="@string/equalizer_settings_title"
+        android:icon="@drawable/ic_fusion_equalizer" >
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetClass="com.vipercn.viper4android_v2.activity.ViPER4Android"
+            android:targetPackage="com.vipercn.viper4android_v2" /> 
+    </Preference>
+
     <!-- Status bar -->
     <PreferenceScreen
         android:id="@+id/statusbar_settings"
