Settings: Date and Time - We want consistence...change from CheckBoxPreference to SwitchPreference
Google changed it on all main settings. It does not make sense that on system settings
the old CheckBoxes are still used.

This commit changes all CheckBoxes in Date and Time settings to Switches

Same needs to be done for Developer Settings

Change-Id: I5c1f34b813ede998e4fb9dab2a1184a6db51bf79

--- a/res/layout/app_ops_details_item.xml
+++ b/res/layout/app_ops_details_item.xml
@@ -58,11 +58,22 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textAlignment="viewStart" />
 
-    <Switch android:id="@+id/switchWidget"
+    <Spinner
+        android:id="@+id/spinnerWidget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginStart="8dip"
+        android:padding="8dip"
+        android:focusable="false"
+        android:entries="@+array/app_ops_permissions" />
+
+    <Switch
+        android:id="@+id/switchWidget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginStart="8dip"
         android:padding="8dip"
         android:focusable="false"
