Settings: statusbar clock customization + color picker
- added slims clock and date customizations for status bar
- added our own modded marginov color picker which we use as default

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -7,6 +7,11 @@
         android:title="@string/status_bar_title" >
 
         <PreferenceScreen
+                android:key="clock_style_pref"
+                android:fragment="com.android.settings.fusion.StatusBarClockStyle"
+                android:title="@string/status_bar_clock" />
+
+        <PreferenceScreen
                 android:key="network_traffic_state"
                 android:fragment="com.android.settings.fusion.NetworkTraffic"
                 android:summary="@string/network_traffic_summary"
