Settings: add navigation bar category
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -99,6 +99,14 @@
                 android:icon="@drawable/ic_settings_home"
                 />
 
+        <!-- Navigation Settings -->
+        <dashboard-tile
+                android:id="@+id/navigation_bar_settings"
+                android:title="@string/navigation_bar_pref_title"
+                android:fragment="com.android.settings.fusion.NavigationBarSettings"
+                android:icon="@drawable/ic_settings_navigation_bar"
+                />
+
         <!-- Display -->
         <dashboard-tile
                 android:id="@+id/display_settings"
