Add status bar brightness setting

--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -11,6 +11,12 @@
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
                 android:title="@string/status_bar_clock" />
 
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+                android:key="status_bar_brightness_control"
+                android:title="@string/status_bar_toggle_brightness"
+                android:summary="@string/status_bar_toggle_brightness_summary"
+                android:defaultValue="false" />
+
         <PreferenceScreen
                 android:key="network_traffic_state"
                 android:fragment="com.android.settings.fusion.NetworkTraffic"
