--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -34,6 +34,7 @@
                 android:entries="@array/navigation_bar_height_entries"
                 android:entryValues="@array/navigation_bar_height_values"
                 android:defaultValue="48"
+                android:dependency="navbar_force_enable"
                 android:persistent="false" />
 
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
