[1/2] Settings AppOps: show/hide app type and allow/deny counters
Squash of:

Author: Sam Mortimer <sam@mortimer.me.uk>
Date:   Thu Oct 3 13:51:31 2013 -0700
AppOps: menu options to show/hide user and system apps
Change-Id: Ia55364c361db949a891e4b53a757ee4dff519eb6

Author: Sam Mortimer <sam@mortimer.me.uk>
Author: Danny Baumann <dannybaumann@web.de>
Date:   Wed Oct 2 22:24:14 2013 -0700
[1/2] AppOps: Show allowed/ignored counts
Change-Id: Ia27737155c33e934df9a2a1fcff88379240fd096

Author: Sam Mortimer <sam@mortimer.me.uk>
Date:   Sun Dec 1 21:39:07 2013 -0800
AppOps: only apply app type filters to summary screen
    *) If buildState() is called for a single package, do
       not apply hide user/system app filters.
    *) Fixes show detail display when called via
       long press in privacyguard and an AppOp hide
       filter is ticked.
Change-Id: If31d094fb989836ab6829daeefe820695032c0ed

Change-Id: I4d6f37b3923eb9bc98d67101d6f0ef481a427682

Patchset: 2
http://review.cyanogenmod.org/#/c/79397/

--- a/res/values/fusion_arrays.xml
+++ b/res/values/fusion_arrays.xml
@@ -288,7 +288,7 @@
     </string-array>
 
     <!-- App ops, extension of AOSP app_ops_summaries and app_ops_labels -->
-    <string-array name="app_ops_summaries_slim" translatable="false">
+    <string-array name="app_ops_summaries_fusion" translatable="false">
         <item>@string/app_ops_summaries_coarse_location</item>
         <item>@string/app_ops_summaries_fine_location</item>
         <item>@string/app_ops_summaries_gps</item>
@@ -351,7 +351,7 @@
         <item>@string/app_ops_summaries_data_change</item>
     </string-array>
 
-    <string-array name="app_ops_labels_slim" translatable="false">
+    <string-array name="app_ops_labels_fusion" translatable="false">
         <item>@string/app_ops_labels_location</item>
         <item>@string/app_ops_labels_location</item>
         <item>@string/app_ops_labels_location</item>
@@ -415,7 +415,7 @@
     </string-array>
 
     <!-- Names of categories of app ops tabs -->
-    <string-array name="app_ops_categories_slim" translatable="false">
+    <string-array name="app_ops_categories_fusion" translatable="false">
         <item>@string/app_ops_categories_location</item>
         <item>@string/app_ops_categories_personal</item>
         <item>@string/app_ops_categories_messaging</item>
