--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -102,9 +102,9 @@
 
         <!-- Navigation Settings -->
         <dashboard-tile
-                android:id="@+id/navigation_bar_settings"
-                android:title="@string/navigation_bar_pref_title"
-                android:fragment="com.android.settings.fusion.NavigationBarSettings"
+                android:id="@+id/navigation_settings"
+                android:title="@string/navigation_pref_title"
+                android:fragment="com.android.settings.fusion.NavigationSettings"
                 android:icon="@drawable/ic_settings_navigation_bar"
                 />
 
@@ -122,13 +122,6 @@
                 android:title="@string/notification_settings"
                 android:fragment="com.android.settings.notification.NotificationSettings"
                 android:icon="@drawable/ic_settings_notifications"
-                />
-
-        <dashboard-tile
-                android:id="@+id/button_settings"
-                android:title="@string/button_pref_title"
-                android:fragment="com.android.settings.ButtonSettings"
-                android:icon="@drawable/ic_settings_home"
                 />
 
         <!-- Storage -->
