--- a/res/xml/fusion_navigation_settings.xml
+++ b/res/xml/fusion_navigation_settings.xml
@@ -15,7 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/navigation_bar_pref_title">
+    android:title="@string/navigation_pref_title">
 
     <PreferenceCategory
         android:key="navigation_bar_simulate"
@@ -37,12 +37,16 @@
             android:dependency="navbar_force_enable"
             android:persistent="false" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/hardware_keys_category_title" >
+
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="hardware_keys_disable"
             android:title="@string/hardware_keys_disable_title"
             android:summary="@string/hardware_keys_disable_summary"
-            android:defaultValue="false"
-            android:dependency="navbar_force_enable" />
+            android:defaultValue="false" />
 
         <com.android.settings.fusion.ButtonBacklightBrightness
             android:key="button_backlight"
