[1/2] Settings: Add support for OP_ALARM_WAKEUP
Port from cm-10.2 and cm-11.0

Author: Sam Mortimer <sam@mortimer.me.uk>
Date:   Mon Sep 30 23:10:35 2013 -0700
[1/2] AppOps: Add alarm wakeup op
Change-Id: Ic739519cb9df9d2c67d65e3572a119b4d55145f0

Change-Id: I417742d00f60b487942ee2adf9b75d2b04a0f766

Patchset: 1
http://review.cyanogenmod.org/#/c/80212/

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -423,6 +423,7 @@
     <string name="app_ops_summaries_wifi_change">Wi\u2011Fi change</string>
     <string name="app_ops_summaries_bluetooth_change">Bluetooth change</string>
     <string name="app_ops_summaries_data_change">data change</string>
+    <string name="app_ops_summaries_wake_up">wake up</string>
     <string name="app_ops_summaries_send_mms">send MMS</string>
     <string name="app_ops_summaries_read_mms">read MMS</string>
     <string name="app_ops_summaries_write_mms">write MMS</string>
@@ -474,6 +475,7 @@
     <string name="app_ops_labels_wifi_change">Wi\u2011Fi change</string>
     <string name="app_ops_labels_bluetooth_change">Bluetooth change</string>
     <string name="app_ops_labels_data_change">Data change</string>
+    <string name="app_ops_labels_wake_up">Wake up</string>
     <string name="app_ops_labels_send_mms">Send MMS</string>
     <string name="app_ops_labels_read_mms">Read MMS</string>
     <string name="app_ops_labels_write_mms">Write MMS</string>
